Styling - AbstractDecorationPainter.java - Added `decorationBorder` property which change can be fired on `JComponent` to forcefully update borders - AbstractGroupingLayout.java - Added forceful layout components border update call upon complete descriptors reset - DecorationUtils.java - Added method to conveniently fire `decorationBorder` property change - AbstractDecorationPainter.java - Changed some method names to correctly represent their purpose - AbstractTextContent.java - Removed redundant horizontal alignment re-check
DockablePane
- WebDockablePaneModel.java - Implemented appropriate grouping descriptors for frames
- WebDockablePane.java - Added `groupElements` property that can be set to `true` to enable underlying layout grouping
- WebDockablePane.java - Added temporary `sidebarSpacing` property that can be used to modify sidebar spacing
- DockablePanePainter.java, ComponentStyle.xsd - Added `areaPainter` that allows to restyle nine different areas of dockable pane
- IDockableAreaPainter.java, DockableAreaPainter.java - New painter for dockable pane areas
- SidebarButton.java - Separated into standalone public class for override convenience
- WebDockablePaneModel.java - Fixed issue with dropping frames in and out of container near content area
- WebDockablePaneModel.java - Fixed maximized frame to take whole dockable pane area including sidebars space
- WebDockableFrameUI.java - Disabled frame drag within dockable pane while it is maximized
- WebDockableFrameUI.java - Simplified condition for frame move in floating state
- DockablePaneGlassLayer.java - Added try/catch to properly capture drop exceptions in future
- WebDockablePane.java - Renamed `resizeGripper` property into `resizeGripperWidth` to clarify what exactly it affects
- SidebarButtonVisibility.java - Renamed from `SidebarVisibility` to clarify what exactly it affects
- DockableElement.java - Added `Cloneable` interface as all elements should be cloneable
- StyleId.java, dockablepane.xml, docka

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -292,8 +292,8 @@
                 </Dictionary>
                 <Dictionary prefix="action">
                     <record key="title">
-                        <value lang="en">File link</value>
-                        <value lang="ru">Ссылка на файл</value>
+                        <value lang="en">Custom action link</value>
+                        <value lang="ru">Ссылка с действием</value>
                     </record>
                     <record key="link">
                         <value lang="en">Show notification</value>
