MemoryBar [ #589 ] - WebMemoryBar.java - Component have been revamped and now has it's own UI and painter implementations - WebMemoryBar.java - Doesn't extend `WebButton` anymore and uses it's own custom `ButtonModel` - WebMemoryBar.java - Added orientation setting to allow positioning it vertically - WMemoryBarInputListener.java - Separate input listener for `WebMemoryBar` button-like actions - memorybar.xml, StyleId - Adjusted styles to use `memorybar` base component type - light-icon-set.xml, dark-icon-set.xml, Icons.java - Added `memory` icon for `WebMemoryBar` default tooltip - WebLookAndFeel.java - Added separate font for `memorybar` component
ProgressBar
- ProgressBarPainter.java - Removed hardcoded progress bounds
- ProgressShape.java - New custom shape for `JProgressBar` progress based on `AbstractProgressShape`
- progressbar.xml - Now uses `ProgressShape` instead of `WebShape`

Styling
- AbstractProgressShape.java - New abstract `IShape` implementation for simple custom progress shapes

Canvas
- canvas.xml - Adjusted dark gripper colors

MultiSplitPane
- MultiSplitPanePainter.java - Added orientation state support

Utilities
- ComponentUpdater.java - Removed as redundant, use `TaskManager` or `WebTimer` instead when appropriate
- MathUtils.java - Added `roundToInt ( double )` method for convenience

DemoApplication
- WebMemoryBarExample.java - Added example for `WebMemoryBar` component
- JDesktopPaneExample.java - Renamed from `JInternalFrameExample` and moved into `ContainersGroup` instead of a custom one
- DemoApplication.java - Moved resize gripper on top of the memory bar in status bar via overlay

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -2037,6 +2037,22 @@
                     </record>
                 </Dictionary>
             </Dictionary>
+            <Dictionary prefix="jdesktoppane">
+                <record key="title">
+                    <value lang="en">JDesktopPane</value>
+                    <value lang="ru">JDesktopPane</value>
+                </record>
+                <Dictionary prefix="frame">
+                    <record key="button">
+                        <value lang="en">Frame %s</value>
+                        <value lang="ru">Фрейм %s</value>
+                    </record>
+                    <record key="title">
+                        <value lang="en">Simple frame %s</value>
+                        <value lang="ru">Простой фрейм %s</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
             <Dictionary prefix="breadcrumb">
                 <record key="title">
                     <value lang="en">WebBreadcrumb</value>
@@ -2258,6 +2274,36 @@
                     <record key="title">
                         <value lang="en">Vertical progress bar</value>
                         <value lang="ru">Вертикальный прогресс бар</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
+            <Dictionary prefix="memorybar">
+                <record key="title">
+                    <value lang="en">WebMemoryBar</value>
+                    <value lang="ru">WebMemoryBar</value>
+                </record>
+                <Dictionary prefix="horizontal">
+                    <record key="title">
+                        <value lang="en">Horizontal</value>
+                        <value lang="ru">Горизонтальный</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="vertical">
+                    <record key="title">
+                        <value lang="en">Vertical</value>
+                        <value lang="ru">Вертикальный</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="horizontal.undecorated">
+                    <record key="title">
+                        <value lang="en">Horizontal undecorated</value>
+                        <value lang="ru">Горизонтальный без декораций</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="vertical.undecorated">
+                    <record key="title">
+                        <value lang="en">Vertical undecorated</value>
+                        <value lang="ru">Вертикальный без декораций</value>
                     </record>
                 </Dictionary>
             </Dictionary>
@@ -2737,28 +2783,6 @@
                             <value lang="ru">WebExCheckBoxTree</value>
                         </record>
                     </Dictionary>
-                </Dictionary>
-            </Dictionary>
-        </Dictionary>
-        <Dictionary prefix="desktoppane">
-            <record key="title">
-                <value lang="en">JDesktopPane</value>
-                <value lang="ru">JDesktopPane</value>
-            </record>
-            <Dictionary prefix="jinternalframe">
-                <record key="title">
-                    <value lang="en">JInternalFrame</value>
-                    <value lang="ru">JInternalFrame</value>
-                </record>
-                <Dictionary prefix="frame">
-                    <record key="button">
-                        <value lang="en">Frame %s</value>
-                        <value lang="ru">Фрейм %s</value>
-                    </record>
-                    <record key="title">
-                        <value lang="en">Simple frame %s</value>
-                        <value lang="ru">Простой фрейм %s</value>
-                    </record>
                 </Dictionary>
             </Dictionary>
         </Dictionary>
